--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ button
     color:white;
     border: none;
 }
+.fondo{
+    background-color: #424141;
+    opacity: 0.8;
+}
 .navbar-brand 
 {
     display: flex;
